[package]
name = "export_csv_links"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24", features = ["default"] }
egui = "0.24"
clap = { version = "4", features = ["derive"] }
csv = "1.1"
once_cell = "1.18"
rayon = "1.8"
regex = "1.10"
winapi = { version = "0.3", features = ["winuser", "windef"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"
